--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,94 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  /* height: 40vmin; */
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* background-color: #282c34; */
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+}
+
+.paragraphtxt {
+  margin-top: 2%;
+  color: black;
+  font-family: Montserrat;
+  font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 25px;
+text-align: center;
+}
+
+.paragraphtxt2 {
+  font-family: Montserrat;
+font-style: normal;
+font-weight: 500;
+font-size: 15px;
+line-height: 25px;
+/* identical to box height, or 167% */
+
+text-align: center;
+
+color: #000000;
+}
+
+.Apple-button {
+  margin-top: 2%;
+  width: 115px;
+  Height: 35.94px;
+}
+
+.footer {
+  margin-top: 6%;
+}
+
+.privacy {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */ 
+  color: #0DAEFF;
+  text-decoration: none;
+  padding-right: 1%;
+}
+
+.terms {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */ 
+  color: #0DAEFF;
+  text-decoration: none;
+  padding-right: 1%;
+}
+
+.contact {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */ 
+  color: #0DAEFF;
+  text-decoration: none;
 }
 
 .App-link {
